--- a/foreach-movies-app/src/css/_pagination.scss
+++ b/foreach-movies-app/src/css/_pagination.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .pagination {
   display: flex;
   justify-content: center;
@@ -15,7 +17,7 @@
       }
     }
     &.active a {
-      background-color: #007bff;
+      background-color: $secondary;
       color: #fff;
     }
   }
