--- a/foreach-movies-app/src/css/style.css
+++ b/foreach-movies-app/src/css/style.css
@@ -167,12 +167,12 @@ footer {
 .search-bar input {
   padding: 0.5em;
   border: none;
-  border-radius: 2px;
+  border-radius: 3px;
   width: 15em;
 }
 .search-bar a {
   padding: 0.5em 1em;
-  border-radius: 2px;
+  border: none;
   background-color: #3b7e91;
   color: white;
   text-decoration: none;
@@ -180,6 +180,39 @@ footer {
 }
 .search-bar a:hover {
   background-color: rgba(59, 126, 145, 0.5);
+}
+
+.search-bar-home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 40em;
+  gap: 1em;
+}
+@media screen and (max-width: 768px) {
+  .search-bar-home {
+    width: 95%;
+  }
+}
+.search-bar-home input {
+  padding: 0.5em;
+  border: none;
+  border-radius: 2px;
+  font-size: 1.3em;
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+}
+.search-bar-home button {
+  padding: 0.5em 1em;
+  border-radius: 2px;
+  border: none;
+  background-color: #3b7e91;
+  color: white;
+  text-decoration: none;
+  font-size: 1.3em;
+  cursor: pointer;
+}
+.search-bar-home button:hover {
+  background-color: #2c5f6d;
 }
 
 /*# sourceMappingURL=style.css.map */
