--- a/foreach-movies-app/src/css/_pagination.scss
+++ b/foreach-movies-app/src/css/_pagination.scss
@@ -14,6 +14,7 @@
       text-decoration: none;
       &:hover {
         background-color: #f0f0f0;
+        cursor: pointer;
       }
     }
     &.active a {
