--- a/foreach-movies-app/src/css/style.css
+++ b/foreach-movies-app/src/css/style.css
@@ -96,6 +96,7 @@ footer {
 }
 .pagination li a:hover {
   background-color: #f0f0f0;
+  cursor: pointer;
 }
 .pagination li.active a {
   background-color: #3b7e91;
