--- a/foreach-movies-app/src/css/style.css
+++ b/foreach-movies-app/src/css/style.css
@@ -216,4 +216,13 @@ footer {
   background-color: #2c5f6d;
 }
 
+.genre-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 20px 0;
+  padding: 0;
+  list-style: none;
+}
+
 /*# sourceMappingURL=style.css.map */
