--- a/foreach-movies-app/src/css/_header.scss
+++ b/foreach-movies-app/src/css/_header.scss
@@ -1,14 +1,24 @@
 @import 'variables';
 
 header {
-    background-color: $primary;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     font-size: 2em;
-    color: white;
-    height: 10vh;
+    color: $primary;
+    height: 12vh;
+
+    .logo-searchbar {
+        background-color: $primary;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        align-items: center;
+        box-shadow: 0px 0px 5px 2px rgba($color: #000000, $alpha: 0.3);
+    }
 }
 
 .App-logo {
