--- a/foreach-movies-app/src/css/_search-result.scss
+++ b/foreach-movies-app/src/css/_search-result.scss
@@ -3,13 +3,13 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 20px;
-    ul {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 1em;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
+}
+.search-result > ul:first-of-type {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1em;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
