--- a/foreach-movies-app/src/css/style.css
+++ b/foreach-movies-app/src/css/style.css
@@ -180,12 +180,18 @@ footer {
   height: 2em;
   gap: 0.3em;
   font-size: 0.5em;
+  width: 30em;
+}
+@media screen and (max-width: 768px) {
+  .search-bar {
+    width: 17em;
+  }
 }
 .search-bar input {
   padding: 0.5em;
   border: none;
   border-radius: 3px;
-  width: 15em;
+  width: 100%;
 }
 .search-bar a {
   padding: 0.5em 1em;
@@ -398,6 +404,24 @@ button:hover {
   padding: 0;
   list-style: none;
   gap: 0.3em;
+}
+
+.error {
+  color: red;
+  text-align: center;
+  position: absolute;
+  top: 6em;
+  left: 0;
+  right: 0;
+}
+
+.loading-fetching {
+  color: #282c34;
+  text-align: center;
+  position: absolute;
+  top: 6em;
+  left: 0;
+  right: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
