--- a/foreach-movies-app/src/css/style.css
+++ b/foreach-movies-app/src/css/style.css
@@ -180,7 +180,7 @@ footer {
   height: 2em;
   gap: 0.3em;
   font-size: 0.5em;
-  width: 30em;
+  width: 100%;
 }
 @media screen and (max-width: 768px) {
   .search-bar {
@@ -192,6 +192,7 @@ footer {
   border: none;
   border-radius: 3px;
   width: 100%;
+  right: 300px;
 }
 .search-bar a {
   padding: 0.5em 1em;
