--- a/foreach-movies-app/src/css/_global.scss
+++ b/foreach-movies-app/src/css/_global.scss
@@ -34,8 +34,8 @@ h1 {
     text-align: center;
 }
 
-.fetching {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+// .fetching {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
