--- a/foreach-movies-app/src/css/_select-genre.scss
+++ b/foreach-movies-app/src/css/_select-genre.scss
@@ -32,4 +32,9 @@ select::-ms-expand {
    overflow: hidden;
    border-radius: .25em;
    box-shadow: 0 3px 3px 0 rgba($color: black, $alpha: .16);
+
+   @media screen and (max-width: 768px) {
+      width: 100%;
+
+   }
 }
