--- a/foreach-movies-app/src/css/_messages.scss
+++ b/foreach-movies-app/src/css/_messages.scss
@@ -9,11 +9,11 @@
     right: 0;
 }
 
-.loading-fetching {
-    color: $primary;
-    text-align: center;
-    position: absolute;
-    top: 6em;
-    left: 0;
-    right: 0;
-}
+// .loading-fetching {
+//     color: $primary;
+//     text-align: center;
+//     position: absolute;
+//     top: 6em;
+//     left: 0;
+//     right: 0;
+// }
