--- a/foreach-movies-app/src/css/main.scss
+++ b/foreach-movies-app/src/css/main.scss
@@ -6,8 +6,10 @@
 @import 'pagination';
 @import 'movie-card';
 @import 'search-bar';
-@import 'genre-menu';
+@import 'filters';
 @import 'navigation';
 @import 'select-genre';
 @import 'movies-filter';
 @import 'messages';
+@import 'loader';
+@import 'movie-details';
