--- a/foreach-movies-app/src/css/style.css
+++ b/foreach-movies-app/src/css/style.css
@@ -34,12 +34,6 @@ h1 {
   text-align: center;
 }
 
-.fetching {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 header {
   display: flex;
   flex-direction: column;
@@ -47,7 +41,7 @@ header {
   justify-content: space-between;
   font-size: 2em;
   color: #282c34;
-  height: 12vh;
+  height: 10vh;
 }
 header .logo-searchbar {
   background-color: #282c34;
@@ -239,17 +233,55 @@ footer {
   background-color: #2c5f6d;
 }
 
-.genre-menu {
+.filters {
   display: flex;
   flex-direction: row;
+  gap: 0.2em;
+  width: 70%;
   justify-content: center;
-  margin: 20px 0;
+  padding: 0;
+  list-style: none;
+  background-color: rgb(202, 202, 202);
+  padding: 1em;
+  border-radius: 5px;
+  box-shadow: inset 0 3px 3px 0 rgba(0, 0, 0, 0.16);
+}
+@media screen and (max-width: 768px) {
+  .filters {
+    width: 90%;
+    flex-direction: column;
+  }
+}
+.filters .filter {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2em;
+  justify-content: center;
+  margin: 0;
   padding: 0;
   list-style: none;
 }
+@media screen and (max-width: 768px) {
+  .filters .filter {
+    flex-direction: row;
+    justify-content: start;
+  }
+}
+.filters .filter h3 {
+  margin: 0;
+  padding: 0;
+  color: #282c34;
+}
+@media screen and (max-width: 768px) {
+  .filters .filter h3 {
+    width: 6em;
+    line-height: 1.7em;
+  }
+}
 
 nav {
-  height: 65px;
+  height: 75px;
+  position: relative;
 }
 
 #menuToggle {
@@ -380,6 +412,11 @@ select::-ms-expand {
   border-radius: 0.25em;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.16);
 }
+@media screen and (max-width: 768px) {
+  .select {
+    width: 100%;
+  }
+}
 
 button {
   padding: 0.5em;
@@ -416,13 +453,103 @@ button:hover {
   right: 0;
 }
 
-.loading-fetching {
-  color: #282c34;
+/* HTML: <div class="loader"></div> */
+/* HTML: <div class="loader"></div> */
+.loader {
+  margin: auto;
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #3b7e91;
+  --_m:
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
+.detail-title {
+  font-size: 2em;
+  font-weight: bold;
   text-align: center;
-  position: absolute;
-  top: 6em;
-  left: 0;
-  right: 0;
+}
+
+.movie-detail {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  width: 90%;
+  gap: 2em;
+}
+@media screen and (max-width: 768px) {
+  .movie-detail {
+    width: 95%;
+    flex-direction: column;
+  }
+}
+.movie-detail .detail-pic {
+  width: 30em;
+  border-radius: 5px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.4);
+}
+@media screen and (max-width: 768px) {
+  .movie-detail .detail-pic {
+    width: 100%;
+  }
+}
+.movie-detail .detail-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  gap: 1em;
+  text-align: center;
+  position: relative;
+}
+.movie-detail .detail-content .original-title {
+  font-size: 1.2em;
+}
+.movie-detail .detail-content .overview {
+  font-size: 1.2em;
+  text-align: justify;
+}
+.movie-detail .detail-content .genres {
+  font-size: 1.2em;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 0.5em;
+}
+.movie-detail .detail-content .genres li {
+  display: inline;
+  color: #3b7e91;
+  list-style: none;
+}
+.movie-detail .detail-content .genres a {
+  text-decoration: none;
+  background-color: rgb(240, 240, 240);
+  padding: 0.5em;
+  height: 2em;
+  line-height: 1em;
+  border-radius: 3px;
+  flex-grow: 1;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.16);
+}
+.movie-detail .detail-content .back {
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
