--- a/foreach-movies-app/src/css/_movie-details.scss
+++ b/foreach-movies-app/src/css/_movie-details.scss
@@ -1,18 +1,20 @@
 @import 'variables';
 
-.detail-title {
-    font-size: 2em;
-    font-weight: bold;
-    text-align: center;
-}
+// .detail-title {
+//     font-size: 2em;
+//     font-weight: bold;
+//     text-align: center;
+// }
+
 .movie-detail {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     margin: 0;
     width: 90%;
     gap: 2em;
+    padding-bottom: 1.5em;
 
     @media screen and (max-width: 768px) {
         width: 95%;
@@ -33,12 +35,36 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         width: 100%;
         height: 100%;
         gap: 1em;
         text-align: center;
         position: relative;
+
+        .detail-top {
+
+            width: 100%;
+
+            p {
+                text-align: justify;
+            }
+        }
+
+        .detail-title {
+            font-size: 2em;
+            font-weight: bold;
+            text-align: center;
+            padding-bottom: 1em;
+        }
+
+        .detail-infos {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 1em;
+            margin-bottom: 1em;
+        }
 
         .original-title {
             font-size: 1.2em;
@@ -47,6 +73,23 @@
         .overview {
             font-size: 1.2em;
             text-align: justify;
+        }
+        h3 {
+            text-align: start;
+        }
+
+        .detail-bottom {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 1em;
+            width: 100%;
+            margin-top: 2em;
+
+            .back {
+                width: 7em;
+            }
         }
 
         .genres {
@@ -67,13 +110,10 @@
                 height: 2em;
                 line-height: 1em;
                 border-radius: 3px;
-                flex-grow: 1;
-                box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.16);
+                &:hover {
+                    background-color: rgba($color: $secondary, $alpha: 0.1);
+                }
             }
-        }
-
-        .back {
-            width: 100%;
         }
     }
 }
