--- a/foreach-movies-app/src/css/_header.scss
+++ b/foreach-movies-app/src/css/_header.scss
@@ -7,12 +7,13 @@ header {
     justify-content: space-between;
     font-size: 2em;
     color: $primary;
-    height: 10vh;
+    height: 8vh;
+    z-index: 1000;
 
     .logo-searchbar {
         background-color: $primary;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        display: flex;
+        // grid-template-columns: repeat(3, 1fr);
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
@@ -23,5 +24,5 @@ header {
 
 .App-logo {
     height: 7vh;
-    pointer-events: none;
+    pointer-events:stroke;
 }
