--- a/foreach-movies-app/src/css/style.css
+++ b/foreach-movies-app/src/css/style.css
@@ -194,24 +194,40 @@ footer {
 
 .search-bar {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   height: 2em;
   font-size: 0.5em;
   width: 50%;
+  border-radius: 3px;
+  background-color: white;
 }
 @media screen and (max-width: 768px) {
   .search-bar {
-    width: 17em;
+    width: 12em;
   }
 }
-.search-bar input {
-  padding: 0.5em;
+.search-bar .search-logo {
+  width: 1.7em;
+  padding-left: 0.2em;
+  opacity: 0.3;
+}
+.search-bar .search-input {
   border: none;
   border-radius: 3px;
   width: 93%;
+  background-color: white;
+}
+.search-bar .search-input input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: transparent;
+  font-size: 1em;
+  padding-left: 0.5em;
+  outline: none;
 }
 @media screen and (max-width: 768px) {
-  .search-bar input {
+  .search-bar .search-input {
     width: 75%;
   }
 }
@@ -229,22 +245,43 @@ footer {
 
 .search-bar-home {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: start;
   width: 40em;
   gap: 1em;
+  margin-top: 2em;
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
 }
 @media screen and (max-width: 768px) {
   .search-bar-home {
     width: 95%;
   }
 }
-.search-bar-home input {
-  padding: 0.5em;
+.search-bar-home .search-logo {
+  width: 1.7em;
+  margin-left: 0.8em;
+  opacity: 0.3;
+}
+.search-bar-home .search-input {
   border: none;
-  border-radius: 2px;
-  font-size: 1.3em;
-  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  width: 93%;
+}
+.search-bar-home .search-input input {
+  width: 100%;
+  height: 3em;
+  border: none;
+  background-color: transparent;
+  font-size: 1em;
+  padding-left: 0.5em;
+  outline: none;
+}
+@media screen and (max-width: 768px) {
+  .search-bar-home .search-input {
+    width: 75%;
+  }
 }
 .search-bar-home button {
   padding: 0.5em 1em;
