--- a/foreach-movies-app/src/css/_movie-details.scss
+++ b/foreach-movies-app/src/css/_movie-details.scss
@@ -63,7 +63,14 @@
             flex-direction: row;
             align-items: center;
             gap: 1em;
-            margin-bottom: 1em;
+            margin-top: 1em;
+            a {
+                text-decoration: none;
+                color: $secondary;
+                &:hover {
+                    color: rgba($color: $secondary, $alpha: 0.7);
+                }
+            }
         }
 
         .original-title {
@@ -86,6 +93,9 @@
             gap: 1em;
             width: 100%;
             margin-top: 2em;
+            @media screen and (max-width: 768px){
+                flex-direction: column;
+            }
 
             .back {
                 width: 7em;
@@ -98,6 +108,10 @@
             flex-wrap: wrap;
             width: 100%;
             gap: 0.5em;
+            @media screen and (max-width: 768px) {
+                justify-content: center;
+
+            }
             li {
                 display: inline;
                 color: $secondary;
