--- a/foreach-movies-app/src/css/style.css
+++ b/foreach-movies-app/src/css/style.css
@@ -1,428 +1,17 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 9 | @import 'genre-menu';
+ *   |         ^^^^^^^^^^^^
+ *   '
+ *   src/css/main.scss 9:9  root stylesheet */
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(226, 226, 226);
-  overflow-x: hidden;
-}
-
-main {
-  padding: 1vh;
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  align-items: center;
-  gap: 1em;
-  justify-content: flex-start;
-}
-
-#root {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-h1 {
-  width: 100%;
-  text-align: center;
-}
-
-.fetching {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 2em;
-  color: #282c34;
-  height: 12vh;
-}
-header .logo-searchbar {
-  background-color: #282c34;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
-}
-
-.App-logo {
-  height: 7vh;
-  pointer-events: none;
-}
-
-footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color: #282c34;
-  color: rgba(255, 255, 255, 0.568);
-  text-align: center;
-  padding: 10px;
-  width: 100%;
-  height: 4vh;
-  margin-top: auto;
-}
-
-.search-result {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.search-result > ul:first-of-type {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1em;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-.pagination li {
-  display: inline-block;
-}
-.pagination li a {
-  display: flex;
-  padding: 5px;
-  border: 1px solid #ccc;
-  color: #333;
-  text-decoration: none;
-}
-.pagination li a:hover {
-  background-color: #f0f0f0;
-  cursor: pointer;
-}
-.pagination li.active a {
-  background-color: #3b7e91;
-  color: #fff;
-}
-
-.movie-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  width: 30em;
-  gap: 1em;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
   padding: 1em;
-  border-radius: 5px;
-  background-color: white;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 9 \2502  @import 'genre-menu';\a   \2502          ^^^^^^^^^^^^\a   \2575 \a   src/css/main.scss 9:9  root stylesheet";
 }
-@media screen and (max-width: 768px) {
-  .movie-card {
-    width: 90%;
-  }
-}
-.movie-card img {
-  width: 25em;
-  border-radius: 5px;
-}
-@media screen and (max-width: 768px) {
-  .movie-card img {
-    width: 95%;
-  }
-}
-.movie-card h3 {
-  font-size: 1.2em;
-  text-align: center;
-  color: #282c34;
-}
-.movie-card h5 {
-  font-size: 0.9em;
-  text-align: center;
-  color: rgb(80, 80, 80);
-  font-weight: normal;
-}
-.movie-card .movie-desc {
-  font-size: 1em;
-  text-align: start;
-  width: 89%;
-}
-.movie-card a {
-  padding: 0.5em 1em;
-  border-radius: 2px;
-  background-color: #3b7e91;
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-}
-.movie-card a:hover {
-  background-color: rgba(59, 126, 145, 0.5);
-}
-
-.search-bar {
-  display: flex;
-  justify-content: center;
-  height: 2em;
-  gap: 0.3em;
-  font-size: 0.5em;
-  width: 100%;
-}
-@media screen and (max-width: 768px) {
-  .search-bar {
-    width: 17em;
-  }
-}
-.search-bar input {
-  padding: 0.5em;
-  border: none;
-  border-radius: 3px;
-  width: 100%;
-  right: 300px;
-}
-.search-bar a {
-  padding: 0.5em 1em;
-  border: none;
-  background-color: #3b7e91;
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-}
-.search-bar a:hover {
-  background-color: rgba(59, 126, 145, 0.5);
-}
-
-.search-bar-home {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 40em;
-  gap: 1em;
-}
-@media screen and (max-width: 768px) {
-  .search-bar-home {
-    width: 95%;
-  }
-}
-.search-bar-home input {
-  padding: 0.5em;
-  border: none;
-  border-radius: 2px;
-  font-size: 1.3em;
-  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
-}
-.search-bar-home button {
-  padding: 0.5em 1em;
-  border-radius: 2px;
-  border: none;
-  background-color: #3b7e91;
-  color: white;
-  text-decoration: none;
-  font-size: 1.3em;
-  cursor: pointer;
-}
-.search-bar-home button:hover {
-  background-color: #2c5f6d;
-}
-
-.genre-menu {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 20px 0;
-  padding: 0;
-  list-style: none;
-}
-
-nav {
-  height: 65px;
-}
-
-#menuToggle {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 33px;
-  right: 20px;
-  z-index: 1;
-  -webkit-user-select: none;
-  user-select: none;
-}
-#menuToggle ul {
-  padding: 0;
-  list-style-type: none;
-}
-
-#menuToggle input {
-  display: flex;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  cursor: pointer;
-  opacity: 0;
-  z-index: 2;
-}
-
-#menuToggle span {
-  display: flex;
-  width: 29px;
-  height: 2px;
-  margin-bottom: 5px;
-  position: relative;
-  background: #ffffff;
-  border-radius: 3px;
-  z-index: 1;
-  transform-origin: 5px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-}
-
-#menuToggle span:first-child {
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2) {
-  transform-origin: 0% 100%;
-}
-
-#menuToggle input:checked ~ span {
-  opacity: 1;
-  transform: rotate(45deg) translate(-3px, -1px);
-  background: #ffffff;
-}
-
-#menuToggle input:checked ~ span:nth-last-child(3) {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-#menuToggle input:checked ~ span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-#menu {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 300px;
-  height: 100%;
-  overflow-y: auto;
-  background-color: #3b7e91;
-  -webkit-font-smoothing: antialiased;
-  transform-origin: 100% 0%;
-  transform: translate(100%, 0);
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-}
-
-#menu li {
-  padding: 10px 10px;
-  transition-delay: 2s;
-}
-#menu li a {
-  text-decoration: none;
-  color: #e2e2e2;
-  opacity: 1;
-  font-size: 1em;
-  font-weight: 400;
-  transition: 200ms;
-}
-#menu li a:hover {
-  opacity: 0.5;
-}
-
-#menuToggle input:checked ~ ul {
-  transform: none;
-}
-
-select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  outline: 0;
-  box-shadow: none;
-  border: 0 !important;
-  background: #eeeeee;
-  background-image: none;
-  flex: 1;
-  padding: 0 0.5em;
-  color: #282c34;
-  cursor: pointer;
-  font-size: 1em;
-  font-family: "Open Sans", sans-serif;
-}
-
-select::-ms-expand {
-  display: none;
-}
-
-.select {
-  position: relative;
-  display: flex;
-  width: 10em;
-  height: 2em;
-  line-height: 3;
-  background: #d3d3d3;
-  overflow: hidden;
-  border-radius: 0.25em;
-  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.16);
-}
-
-button {
-  padding: 0.5em;
-  border: none;
-  border-radius: 5px;
-  background-color: #3b7e91;
-  color: white;
-  cursor: pointer;
-  font-size: 1em;
-  width: 5em;
-  transition: background-color 0.3s;
-  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.16);
-}
-button:hover {
-  background-color: #2c5f6d;
-}
-
-.movies-filters {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 20px 0;
-  padding: 0;
-  list-style: none;
-  gap: 0.3em;
-}
-
-.error {
-  color: red;
-  text-align: center;
-  position: absolute;
-  top: 6em;
-  left: 0;
-  right: 0;
-}
-
-.loading-fetching {
-  color: #282c34;
-  text-align: center;
-  position: absolute;
-  top: 6em;
-  left: 0;
-  right: 0;
-}
-
-/*# sourceMappingURL=style.css.map */
