--- a/foreach-movies-app/src/css/_filters.scss
+++ b/foreach-movies-app/src/css/_filters.scss
@@ -8,10 +8,10 @@
   justify-content: center;
   padding: 0;
   list-style: none;
-  background-color: rgb(202, 202, 202);
+  // background-color: rgb(202, 202, 202);
   padding: 1em;
   border-radius: 5px;
-  box-shadow: inset 0 3px 3px 0 rgba(0, 0, 0, 0.16);
+  // box-shadow: inset 0 3px 3px 0 rgba(0, 0, 0, 0.16);
 
   @media screen and (max-width: 768px) {
     width: 90%;
