--- a/foreach-movies-app/src/css/_header.scss
+++ b/foreach-movies-app/src/css/_header.scss
@@ -7,18 +7,23 @@ header {
     justify-content: space-between;
     font-size: 2em;
     color: $primary;
-    height: 8vh;
+    height: 7vh;
     z-index: 1000;
 
     .logo-searchbar {
         background-color: $primary;
         display: flex;
-        // grid-template-columns: repeat(3, 1fr);
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
         align-items: center;
         box-shadow: 0px 0px 5px 2px rgba($color: #000000, $alpha: 0.3);
+
+        a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
 }
 
