--- a/foreach-movies-app/src/css/style.css
+++ b/foreach-movies-app/src/css/style.css
@@ -14,7 +14,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(210, 210, 210);
+  background-color: rgb(204, 204, 204);
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
@@ -64,7 +64,7 @@ header {
   justify-content: space-between;
   font-size: 2em;
   color: #282c34;
-  height: 8vh;
+  height: 7vh;
   z-index: 1000;
 }
 header .logo-searchbar {
@@ -75,6 +75,11 @@ header .logo-searchbar {
   width: 100%;
   align-items: center;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
+}
+header .logo-searchbar a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-logo {
@@ -305,10 +310,8 @@ footer {
   justify-content: center;
   padding: 0;
   list-style: none;
-  background-color: rgb(202, 202, 202);
   padding: 1em;
   border-radius: 5px;
-  box-shadow: inset 0 3px 3px 0 rgba(0, 0, 0, 0.16);
 }
 @media screen and (max-width: 768px) {
   .filters {
